--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-appwrite": "^11.1.1"
+    "express": "^4.21.2",
+    "node-appwrite": "^11.1.1",
+    "openai": "^4.86.1"
   }
 }
